--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
     jcenter()
 }
 
+task stage () {
+    dependsOn ':EventRegistration-Backend:assemble'
+}
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
